Fix styling issues with item name overflow

--- a/src/components/ShopItemCard/ShopItemCard.module.css
+++ b/src/components/ShopItemCard/ShopItemCard.module.css
@@ -15,7 +15,7 @@
     box-shadow: 0px 4px 5px -0px rgba(0, 0, 0, 0.3);
 
     display: grid;
-    grid-template-rows: 5.6rem 17rem repeat(3, auto);
+    grid-template-rows: 6.4rem 17rem repeat(3, auto);
     gap: 0.5rem;
 
     box-sizing: border-box; /* Prevent padding from making container larger than defined width + height */
@@ -29,8 +29,9 @@
     font-family: var(--nunito-font-family);
     text-align: center;
     font-size: 1.4rem;
-    line-height: 1.8rem;
+    line-height: 1.6rem;
 
+    height: 6.4rem;
     overflow: hidden;
 }
 
